syntax = "proto3";

option java_multiple_files = true;

package net.nest.grpc.server;


message Empty {}

message EmployeeRequest {
	string name = 1;
	string phone = 2;
	string address = 3;
	string job_title = 4;
	double salary = 5;
}


message MessageResponse {
	int32 status = 1;
	string message = 2;
	Empty data = 3;
}

message EmployeeEntity {
	int32 id = 1;
	string name = 2;
	string phone = 3;
	string address = 4;
	string job_title = 5;
	double salary = 6;
}


message FindEmployeeRequest {
    int32 employee_id = 1;
}

message ResponseEmployeeEntity {
	int32 status = 1;
	string message = 2;
    EmployeeEntity employee_entity = 3;

}

message HelloRequest {
	string greeting = 1;
  }
  
  message HelloResponse {
	string reply = 1;
  }

service EmployeeService {
	rpc create(EmployeeRequest) returns (MessageResponse);
	rpc findAllEmployee(Empty) returns (stream EmployeeEntity);
	rpc findEmployeeById(FindEmployeeRequest) returns (ResponseEmployeeEntity);
	rpc BidiHello(stream HelloRequest) returns (stream HelloResponse);
}

